--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.8.0",
+    "firebase": "^11.0.2",
     "nuxt": "^3.14.1592",
+    "pinia": "^2.2.8",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
