--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.8.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "nuxt": "^3.14.1592",
     "pinia": "^2.2.8",
